--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,7 @@
   },
   "license": "MIT",
   "author": "JakeLoustone, nohobo",
-  "type": "nodejs22",
+  "type": "module",
   "main": "server.ts",
   "scripts": {
     "test": "jest"
