implemented nickname filtering and broke apart setting nick and setting color into two commands. added config item for nickname reservation. added a nick filter for names like admin and a profanity filter.

--- a/server/config.json
+++ b/server/config.json
@@ -5,5 +5,6 @@
 	"maxNickLen": 16,
 	"msgArrayLen": 25,
 	"stvurl": "01GGEWQ46R0006ZFG1F0GCT6YW",
+	"nickres": ["ecto","jakeloustone"],
 	"PORT": 3000
 }
