--- a/server/config.json
+++ b/server/config.json
@@ -5,6 +5,6 @@
 	"maxNickLen": 16,
 	"msgArrayLen": 25,
 	"stvurl": "01GGEWQ46R0006ZFG1F0GCT6YW",
-	"nickres": ["ecto","jakeloustone"],
+	"nickres": ["ecto","jakeloustone","gravebreak"],
 	"PORT": 3000
 }
