--- a/server/config.json
+++ b/server/config.json
@@ -4,6 +4,7 @@
 	"nickSlow": 30,
 	"otherSlow": 5,
 	"timeoutDef": 300,
+	"afkDef": 1000,
 	"maxMsgLen": 255,
 	"maxNickLen": 16,
 	"msgArrayLen": 25,
